--- a/plugins/VNLib.Plugins.Essentials.Accounts/src/VNLib.Plugins.Essentials.Accounts.csproj
+++ b/plugins/VNLib.Plugins.Essentials.Accounts/src/VNLib.Plugins.Essentials.Accounts.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>VNLib.Plugins.Essentials.Accounts</RootNamespace>
     <Copyright>Copyright © 2022 Vaughn Nugent</Copyright>
     <Authors>Vaughn Nugent</Authors>
-    <AssemblyName>Accounts</AssemblyName>
+    <AssemblyName>Essentials.Accounts</AssemblyName>
     
     <PackageId>VNLib.Plugins.Essentials.Accounts</PackageId>
     <Version>1.0.1.5</Version>
@@ -49,7 +49,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Accounts.json">
+    <None Update="Essentials.Accounts.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
