missed config/package files

--- a/.gitignore
+++ b/.gitignore
@@ -473,5 +473,5 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/c,c++,visualstudio
 
-*.json
 *.licenseheader
+/plugins/**/*.json
