--- a/.gitignore
+++ b/.gitignore
@@ -476,3 +476,6 @@ FodyWeavers.xsd
 *.licenseheader
 /plugins/**/*.json
 /lib/vnlib.browser/dist
+
+#allow essentails.accounts.json config file to be public
+!/plugins/VNLib.Plugins.Essentials.Accounts/src/essentials.accounts.json
